[package]
name = "rpg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
druid = { git = "https://github.com/linebender/druid.git" }

wasm-bindgen = "0.2.67"
console_error_panic_hook = "0.1.6"